--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
@@ -243,6 +243,9 @@
         color: #FFFFFF;
         border: none;
     }
+    .stripe-payments-brand {
+        right: -45px;
+    }
     @media screen and (max-width: 768px) {
         #checkout .osc {
             grid-template-columns: repeat(1, 1fr);
