--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/login.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/login.phtml
@@ -140,6 +140,11 @@
     .block-customer-login .facebook-login {
         margin-top: 12px;
     }
+    @media screen and (width: 768px) { 
+        #maincontent > div.columns > div > div.login-container > div.block.block-customer-login > div {
+            margin: 0 auto;
+        }
+    }
     @media screen and (max-width: 768px) {
         .customer-account-forgotpassword .page-main, .block-new-customer, .login-container, #register-form-now {
             width: 100%;
