--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/register.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/register.phtml
@@ -111,7 +111,12 @@
         color: #ffffff;
         background-color: #155da4;
     }
-
+    @media screen and (width: 768px) {
+        .block-register-account .block-content-register {
+            margin: 0 auto;
+            margin-bottom: 30px;
+        }
+    }
     @media screen and (max-width: 768px) {
         .block-register-account .block-content-register{
             padding: 24px 16px 40px 16px;
