--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Checkout/web/css/source/module/_cart.less
@@ -1023,3 +1023,12 @@
 		}
 	}
 }
+@media (min-width: 768px) and (max-width: 1024px){
+    .cart-summary {
+        width: 100% !important;
+    }
+	.abs-shopping-cart-items-desktop, .block-cart-failed, .cart-container .form-cart, .cart-container .cart-gift-item {
+        width: 100% !important;
+        padding-right: 0 !important;
+    }
+}
