--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/web/css/source/_module.less
@@ -571,3 +571,8 @@
         }
     }
 }
+@media screen and  ( min-width: 600px ) and  ( max-width: 800px  ) {
+    #maincontent > div.columns > div.column.main > div.block.block-dashboard-orders > div.block-content > div {
+        overflow-x: scroll;
+    }
+}
