--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_navigation.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_navigation.less
@@ -99,6 +99,9 @@
     .nav-sections-item-last {
         padding-bottom: 17px;
     }
+    .nav-sections-hidden {
+        display: none;
+    }
 
     .nav-open {
         .page-wrapper {
@@ -551,7 +554,7 @@
 
     .nav-sections-item-title { display: none; }
     .nav-sections-item-content {
-        margin-top: 40px !important;
+        margin-top: 24px !important;
         margin-bottom: 36px;
     }
     .nav-sections-item-first {
@@ -560,6 +563,9 @@
     }
     .nav-sections-item-last {
         padding-bottom: 17px;
+    }
+    .nav-sections-hidden {
+        display: none;
     }
 
     .nav-sections {
