--- a/app/code/Flurrybox/EnhancedPrivacy/view/frontend/templates/customer/privacy_popup.phtml
+++ b/app/code/Flurrybox/EnhancedPrivacy/view/frontend/templates/customer/privacy_popup.phtml
@@ -15,7 +15,7 @@
  */
 /** @var \Flurrybox\EnhancedPrivacy\Block\Customer\PrivacyPopup $block */
 ?>
-<div class="enhanced-privacy-cookie-policy" data-bind="scope: 'enhancedprivacy-cookie-policy'">
+<div class="enhanced-privacy-cookie-policy" data-bind="scope: 'enhancedprivacy-cookie-policy'" style="display: none;">
     <!-- ko template: getTemplate() --><!-- /ko -->
 </div>
 <script type="text/x-magento-init">
