--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_navigation.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_navigation.less
@@ -9,6 +9,10 @@
 
 & when (@media-common = true) {
 
+    .nav-sections-hidden {
+        display: none !important;
+    }
+
     .panel.header {
         .links,
         .switcher {
@@ -100,7 +104,7 @@
         padding-bottom: 17px;
     }
     .nav-sections-hidden {
-        display: none;
+        display: none !important;
     }
 
     .nav-open {
@@ -565,7 +569,7 @@
         padding-bottom: 17px;
     }
     .nav-sections-hidden {
-        display: none;
+        display: none !important;
     }
 
     .nav-sections {
