--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_menu.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_menu.less
@@ -543,6 +543,9 @@
 			}
 		}
 		.cdz-vertical-menu{
+            .groupmenu {
+                padding: 3px 0;
+            }
 			li.level0{
 				border-color:#ffffff;
 				> a.menu-link{
