--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
@@ -683,6 +683,9 @@
 @media (min-width: 1025px) {
     .products-grid {
         .product-item .product-item-info {
+            .product-item-details {
+                min-height: 128px;
+            }
             &:hover{
                 .cdz-product-bottom:not(.non-hover){
                     //.abs-scale(~'1, 1');
