--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_slider.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_slider.less
@@ -17,17 +17,20 @@
  }
 
 /* custom style */
-.slideshow-container {
-    .owl-carousel{
-        .owl-stage-outer {
-            height: 422px;
+@media (min-width: 1025px) {
+    .slideshow-container {
+        .owl-carousel {
+            .owl-stage-outer {
+                height: 422px;
+            }
         }
     }
-}
-.product-style05 {
-    .owl-carousel{
-        .owl-stage-outer {
-            height: 280px;
+
+    .product-style05 {
+        .owl-carousel {
+            .owl-stage-outer {
+                height: 280px;
+            }
         }
     }
 }
