--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_AjaxCartPro/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_AjaxCartPro/web/css/source/_module.less
@@ -45,7 +45,7 @@
 		content: '\f106';
 		font-size: 20px;
 		float: right;
-		margin-top: -4px;
+		margin-top: -2px;
 		-moz-transition: all 500ms ease;
 		-webkit-transition: all 500ms ease;
 		-o-transition: all 500ms ease;
@@ -60,6 +60,7 @@
 		    -moz-transform: rotate(180deg);
 			-o-transform: rotate(180deg);
 			transform: rotate(180deg);
+        margin-top: 0;
 	}
 }
 
